k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5001
      nodePort: 30036
